log
mi., 26 de mar. de 2025  9:07:09: 
 tests:  0|6
total_score: 0/70
25021aa
mi., 26 de mar. de 2025  9:07:22: 
 tests:  0|6
total_score: 0/70
c88d66d
mi., 26 de mar. de 2025  9:07:39: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:34:9: error: 'List {aka struct List}' has no member named 'size'
     list->size=0 ;
         ^~
Compilation failed
46f462d
mi., 26 de mar. de 2025  9:12:37: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c50bffa
mi., 26 de mar. de 2025  9:20:07: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
75c938a
mi., 26 de mar. de 2025  9:20:31: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:41:11: error: expected identifier before '*' token
     list->*current = list->head ;
           ^
Compilation failed
f0bc1e9
mi., 26 de mar. de 2025  9:22:06: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:42:5: error: expected expression before '[' token
     [
     ^
list.c:45:5: error: expected ';' before 'list'
     list->current = list->head ;
     ^~~~
Compilation failed
807115d
mi., 26 de mar. de 2025  9:22:17: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:42:5: error: expected expression before '[' token
     [
     ^
list.c:45:5: error: expected ';' before 'list'
     list->current = list->head ;
     ^~~~
Compilation failed
4657b93
mi., 26 de mar. de 2025  9:22:37: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
98f9291
mi., 26 de mar. de 2025  9:23:03: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
38ef6da
mi., 26 de mar. de 2025  9:24:05: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b66c03b
mi., 26 de mar. de 2025  9:24:23: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
e085823
mi., 26 de mar. de 2025  9:26:51: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
6b4f5a3
mi., 26 de mar. de 2025  9:28:36: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
27a5bd6
mi., 26 de mar. de 2025  9:28:57: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
c7f14d9
mi., 26 de mar. de 2025  9:30:31: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
3dafebe
mi., 26 de mar. de 2025  9:31:10: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
cac0398
mi., 26 de mar. de 2025  9:31:33: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
074b319
mi., 26 de mar. de 2025  9:32:40: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4c94f4c
mi., 26 de mar. de 2025  9:32:55: 
 tests:  0|0
56b53ec
mi., 26 de mar. de 2025  9:37:29: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  0|0
d91294a
mi., 26 de mar. de 2025  9:39:42: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
24776b6
mi., 26 de mar. de 2025  9:40:10: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ce02d1b
mi., 26 de mar. de 2025  9:41:41: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
03da583
mi., 26 de mar. de 2025  9:41:57: 
 tests:  0|0
fe944f1
mi., 26 de mar. de 2025  9:48:45: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:61:41: error: invalid operands to binary | (have 'int' and 'Node * {aka struct Node *}')
     if(list==NULL || list->head == NULL |list->current->next)
                                         ^~~~~~~~~~~~~~~~~~~~
Compilation failed
24e465b
mi., 26 de mar. de 2025  9:48:56: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4b95bb2
mi., 26 de mar. de 2025  9:50:20: 
 list.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:70:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
381caf7
mi., 26 de mar. de 2025  9:54:29: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  6|4
total_score: 25/70
61afa0e
mi., 26 de mar. de 2025  9:58:51: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|0
33ab3b1
mi., 26 de mar. de 2025 10:01:08: 
 tests:  0|0
583a839
mi., 26 de mar. de 2025 10:01:29: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  9|3
total_score: 35/70
efe097d
mi., 26 de mar. de 2025 10:02:09: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|0
f30c401
mi., 26 de mar. de 2025 10:02:36: 
 tests:  0|0
4156967
mi., 26 de mar. de 2025 10:02:56: 
 list.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  9|3
total_score: 35/70
bf219b0
Sun, Mar 30, 2025  9:19:43 PM: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:88:48: error: expected expression before ')' token
     Node* newNode = (Node*)malloc(sizeof(sizeof)) ;
                                                ^
Compilation failed
3d9481e
Sun, Mar 30, 2025  9:20:11 PM: 
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:88:48: error: expected expression before ')' token
     Node* newNode = (Node*)malloc(sizeof(sizeof)) ;
                                                ^
Compilation failed
9b5e64e
Sun, Mar 30, 2025  9:20:32 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
2443d2b
Sun, Mar 30, 2025  9:23:55 PM: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  10|2
total_score: 45/70
4e64fa7
